--- a/wp-content/themes/featherlab/css/styles.css
+++ b/wp-content/themes/featherlab/css/styles.css
@@ -30,13 +30,29 @@
 
     --orange-color: #d85d1f;
 
-    --blue-color: #5289ed;
+    --blue-color: #0081af;
 
     --border-color: #f5f5f5;
 
     --bcgr-footer-color: #7d8182;
 
     --white-color: #fff;
+
+    --yellow-color: #ffc100;
+
+    --dark-red-color: #9d4b1b;
+
+    --light-gray-color: #dadada;
+
+    --for-use-inf-1-color: #d75f23;
+
+    --for-use-inf-2-color: #c74602;
+
+    --for-use-inf-3-color: #af3e02;
+
+    --for-use-inf-4-color: #9a3700;
+
+    --for-use-inf-light-color: #f5d6c4;
 
 
     --content-width: 1200px;
@@ -122,12 +138,12 @@ body{
 }
 
 a {
-    color: var(--main-font-color);
+    color: var(--alternative-font-color);
     text-decoration: none;
 }
 
 a:visited {
-    color: var(--main-font-color);
+    color: var(--alternative-font-color);
 }
 
 img{
@@ -139,7 +155,8 @@ address, .address{
     display: block;
 }
 
-li{
+li {
+    display: block;
     list-style-type: none;
 }
 
@@ -186,6 +203,10 @@ li{
 
 .logo-block .img-wrapper .img{
     max-width: 100%;
+}
+
+.section.banner .img-wrapper .img{
+    border-top: 5px solid var(--black-color);
 }
 
 .logo-block .slogon{
@@ -262,7 +283,8 @@ div.work-time {
 }
 
 .main-nav .menu-item:hover a {
-   background-color: #427ce5;
+   background-color: var(--alternative-font-color);
+   color: var(--black-color);
 }
 
 .main-nav .menu-item a {
@@ -441,9 +463,7 @@ a.news-preview{
     font-weight: normal;
 }
 
-.current_page_item{
-    display: none;
-}
+
 
 .current-menu-parent > a,
 .current-menu-item > a{
@@ -556,9 +576,7 @@ a.news-preview{
     padding-top: 15px;
 }
 
-.news-section .proportion-saver{
 
-}
 
 .news-link{
     position: relative;
@@ -573,7 +591,643 @@ a.news-preview{
     line-height: 15px;
 }
 
+.left-nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 100%;
+    background-color: var(--black-color);
+    z-index: 99999;
+}
 
+
+
+.page-404{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.left-block .img {
+    background-image: url(/wp-content/themes/featherlab/img/404.png);
+    background-repeat: no-repeat;
+    margin-left: 500px;
+    height: 500px;
+    width: 348px;
+}
+
+.right-block {
+    width: 100%;
+    height: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+}
+
+.right-block .h1{
+    font-size: 170px;
+    color: var(--red-color);
+    padding: 0;
+}
+
+.right-block .second{
+    font-size: 65px;
+    color: var(--dark-red-color);
+}
+
+.right-block .third{
+    font-size: 20px;
+    color: var(--bcgr-footer-color);
+}
+
+.about-project-nav .p{
+    text-align: center;
+    background-color: var(--black-color);
+    color:var(--alternative-font-color);
+    padding:15px; 
+    transition: background-color .25s;
+    margin: 0 -15px;
+    border-left: 1px solid var(--alternative-font-color);
+    font-weight: 600;
+}
+
+.about-project-nav .p:hover{
+    background-color: var(--orange-color);
+}
+
+
+
+.about-project-nav-second .proportion-saver{
+    padding-bottom: 150%;
+}
+
+.about-project-nav-second .proportion-saver:before{
+    content: "\e918";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-family: "icons";
+    font-size: 192px;
+    color: var(--red-color);
+    line-height: 281px;
+    text-align: center;
+}
+
+.about-project-nav-second .description {
+    margin: 50px;
+}
+
+.about-project-nav-second .p{
+    color:var(--black-color);
+    padding:15px; 
+    transition: background-color .25s;
+    margin: 0 -15px;
+    font-weight: 800;
+}
+
+.over-collaction-not-bold{
+    border-top: 1px solid var(--light-gray-color);
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.about-project-nav-second .red{
+    color: var(--red-color);
+}
+
+.about-project-nav-second .italic{
+    font-style: italic;
+}
+
+
+
+.about-project-nav-third .up{
+    color: var(--red-color);
+    font-size: 100px;
+    font-weight: 700;
+}
+
+.about-project-nav-third .red{
+    color: var(--red-color);
+    font-size: 21px;
+    font-weight: 700;
+}
+
+.about-project-nav-third .right{
+    border-left: 1px solid var(--light-gray-color);
+    padding-left: 120px;
+}
+
+.about-project-nav-third .down{
+    color: var(--black-color);
+    font-weight: 600;
+
+}
+
+
+.about-project-nav-third .proportion-saver:before{
+    content: "\e919";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-family: "icons";
+    font-size: 192px;
+    color: var(--light-gray-color);
+    line-height: 281px;
+    text-align: center;
+}
+
+.about-project-nav-third{
+    padding-bottom: 5%;
+}
+
+.about-project-nav-fourth .col-md-1{
+    border-bottom: 1px solid var(--dark-red-color) ;
+}
+
+.about-project-nav-fourth{
+    font-weight: 600;
+    text-align: center;
+    font-size: 25px;
+    color: var(--red-color);
+}
+
+.about-project-nav-fifth{
+    display: flex;
+    font-weight: 800;
+    text-align: center;
+}
+
+.about-project-nav-fifth .p{
+    padding: 20px 70px 20px 70px;
+}
+
+
+
+.button.download{
+    position: relative;
+    border: none;
+    border-top: 1px solid var(--dark-red-color); 
+    color: var(--red-color);
+    background: none;
+    width: 130px;      
+    padding: 15px 15px 15px 45px;
+
+}
+
+.button.download:before {
+    content: "\e90e";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 45px;
+    height: 100%;
+    text-align: center;
+    font-size: 35px;
+    line-height: 53px;
+}
+
+.about-project-nav-seventh {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+}
+
+.about-project-nav-seventh .col-md-8{
+    display: grid;
+    justify-items: center;
+    row-gap: 15px;
+
+}
+
+.about-project-nav-seventh .first{
+    background-color: var(--red-color);
+    color: var(--alternative-font-color);
+    font-size: 26px;
+    font-weight: 750;
+    padding: 5px 50px 5px 50px;
+    text-align: center;
+}
+
+.about-project-nav-seventh .first .right{
+    font-size: 21px;
+    font-weight: 600;
+}
+
+.about-project-nav-seventh .second{
+    text-align: center;
+    max-width: 550px;
+    color: var(--main-font-color);
+    font-size: 21px;
+    font-weight: 800;
+}
+
+.about-project-nav-seventh .third{
+    text-align: center;
+}
+
+.upper-nav{
+    background-image: url('/wp-content/themes/featherlab/img/main_collection_bg.jpg');
+    height: 100px;
+    justify-content: center;
+    margin-bottom: 60px;
+    margin-top: 10px;
+}
+
+.upper-nav .span{
+    display: flex;
+    justify-content: center;
+    color: var(--alternative-font-color);
+    font-size: 19px;
+    background-image: url("/wp-content/themes/featherlab/img/forum_add.png");
+    background-repeat: no-repeat;
+    width: 410px;
+    height: 100px;
+    align-items: center;
+    font-weight: 600;
+    padding-left: 50px;
+}
+
+.forum-about-project-nav .p{
+    text-align: center;
+    border: 1px solid var(--light-gray-color);
+    color:var(--main-font-color);
+    padding:15px; 
+    transition: background-color .25s;
+}
+
+.forum-about-project-nav .p:hover{
+    background-color: var(--orange-color);
+    color: var(--alternative-font-color);
+}
+
+.forum-about-project-nav .row{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.forum-about-project-nav .p, .select{
+    margin-bottom: 0;
+}
+
+.forum-about-project-nav .select{
+    border: none;
+    border-bottom: 1px solid var(--light-gray-color);
+    padding: 5px 15px 5px 15px;
+    margin-left: 15px;
+    background-color: #fff;
+}
+
+.container{
+    padding: 0;
+}
+
+.forum-about-project-nav {
+    padding: 15px;
+}
+
+.container .forum{
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.container .forum .about-comment{
+    border-bottom: 1px solid var(--light-gray-color);
+}
+
+.container .forum .about-place{
+    font-size: 13px;
+    font-style: italic;
+    color: var(--gray-color);
+    background-color: white;
+}
+
+.w3-center{
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+
+.w3-center .w3-button{
+    font-weight: 500;
+    font-size: 13px;
+    color: var(--black-color);
+    transition: background-color .25s;
+}
+
+.w3-center .previos-page {
+    position: relative;
+    padding: 15px 15px 15px 15px;
+}
+
+.w3-center .previos-page:before {
+    content: "\e907";
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 30px;
+    line-height: 53px;
+    color: var(--black-color);
+    margin-top: 10px;
+}
+
+.w3-center .next-page {
+    position: relative;
+    padding: 15px 25px 15px 15px;
+    margin-left: 10px;
+}
+
+.w3-center .next-page:after {
+    content: "\e913";
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 30px;
+    line-height: 53px;
+    color: var(--black-color);
+    margin-top: 10px;
+}
+
+.w3-center .w3-button {
+    position: relative;
+    padding: 15px 0px 45px 15px;
+}
+
+.w3-center .w3-button:after {
+    content: "\e90c";
+    position: absolute;
+    left: 4px;
+    bottom: 0px;
+    font-size: 30px;
+    line-height: 53px;
+    color: var(--black-color);
+}
+.w3-center .w3-button:hover{
+    color: var(--red-color);
+}
+.w3-button:hover::after{
+    color: var(--red-color);
+}
+.w3-center .previos-page:hover::before{
+    color: var(--red-color);
+}
+.w3-center .next-page:hover::after{
+    color: var(--red-color);
+}
+
+.feather-compilations, .feather-collection-by, .new-on-forum {
+    background-color: var(--dark-gray);
+}
+
+.useful-information{
+    padding:15px; 
+}
+
+.useful-information .col-md-4{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--black-color);
+    color:var(--alternative-font-color);
+    padding:15px; 
+    transition: background-color .25s;
+    margin: 0 0 0 0;
+    border-left: 1px solid var(--alternative-font-color);
+    font-weight: 600;
+    font-size: 13px;
+    height: 50px;
+}
+
+.useful-information .col-md-4:hover{
+    background-color: var(--orange-color);
+}
+
+.useful-information .first-child{
+    margin-left: 0;
+}
+
+.pages-for-useful-information{
+    background-image: url(/wp-content/themes/featherlab/img/inf_background.png);
+    height: 1080px;
+}
+
+.useful-information.first-child{
+    border-bottom: 1px solid var(--light-gray-color);
+    padding-top: 0;
+}
+
+.useful-information.last-child{
+    padding-bottom: 0;
+}
+
+.useful-information-second{
+    display: flex;
+    justify-content: end;
+    background-image: url(/wp-content/themes/featherlab/img/inf_banner.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    padding: 120px 15px 200px;
+}
+
+.useful-information-second .first{
+    color: var(--alternative-font-color);
+    font-size: 21px;   
+    font-weight: 600;   
+}
+
+.useful-information-second .second{
+    color: var(--main-color);
+    padding-top: 30px;
+    font-weight: 800;  
+}
+
+.container-fluid.second{
+    background-image: url(/wp-content/themes/featherlab/img/inf-background.png);
+}
+
+.useful-information-second .third{
+    color: var(--main-color);
+    padding-top: 70px;
+    font-weight: 600;
+   
+}
+
+.useful-information-second .third  .a {
+    color: var(--alternative-font-color);
+    color: var(--dark-red-color);
+    /* background-color: var(--dark-red-color); */
+    /* background: linear-gradient(270deg, transparent 0, var(--dark-red-color) 81px, var(--dark-red-color) 81px, var(--dark-red-color) 100%);
+    padding-right: 81px;
+    padding: 10px 81px 10px 10px; */
+    /* text-decoration-line: dashed;
+    text-decoration-color: var(--dark-red-color);
+    text-underline-offset: 10px;
+    text-decoration-thickness: 5px; */
+    text-decoration: dashed;
+    text-shadow: 1px 0 1px rgba(255, 255, 255, .5), 0 1px 1px rgba(255, 255, 255, .5), 0 -1px 1px rgba(255, 255, 255, .5), -1px 0 1px rgba(255, 255, 255, .5);
+}
+
+.useful-information-third .without-border-left{
+    border-left: none;
+    border-bottom: 5px solid var(--orange-color);
+    text-align: center;
+    margin: 0 220px 45px;
+}
+
+.circle .p{
+    font-size: 85px;
+    font-weight: 900;
+}
+
+.useful-information-third .col-md-8{
+    display: grid;
+    align-items: center;
+    grid-template-columns: 370px 85%;
+}
+
+.useful-information-third .p{
+    color: var(--main-color);
+    font-weight: 800;
+}
+
+.useful-information-third .span{
+    color: var(--red-color);
+    font-weight: 800;
+}
+
+.circle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100px;
+    min-width: 100px;
+    background-color: var(--for-use-inf-light-color);
+    border-radius: 50%;
+    align-self: center;
+    margin: 5px 50px 5px 0;
+}
+
+.circle .first{
+    color: var(--for-use-inf-1-color);
+}
+
+.circle .second{
+    color: var(--for-use-inf-2-color);
+}
+
+.circle .third{
+    color: var(--for-use-inf-3-color);
+}
+
+.circle .fourth{
+    color: var(--for-use-inf-4-color);
+}
+
+.useful-information-third .icon.first:before{
+    content: "\e90d";
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    font-size: 90px;
+    color: var(--alternative-font-color);
+    text-align: center;
+}
+
+.useful-information-third .icon.second:before{
+    content: "\e912";
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    font-size: 90px;
+    color: var(--alternative-font-color);
+    text-align: center;
+}
+.useful-information-third .icon.third:before{
+    content: "\e914";
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    font-size: 90px;
+    color: var(--alternative-font-color);
+    text-align: center;
+}
+.useful-information-third .icon.fourth:before{
+    content: "\e901";
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    font-size: 90px;
+    color: var(--alternative-font-color);
+    text-align: center;
+}
+.useful-information-third .left{
+    display: flex;
+}
+
+.circle.big{
+    height: 170px;
+    width: 170px;
+
+}
+
+.circle.big.first{
+    background-color: var(--for-use-inf-1-color);
+}
+
+.circle.big.second{
+    background-color: var(--for-use-inf-2-color);
+}
+
+.circle.big.third{
+    background-color: var(--for-use-inf-3-color);
+}
+
+.circle.big.fourth{
+    background-color: var(--for-use-inf-4-color);
+}
+
+.useful-information-third .row{
+    justify-content: space-between;
+}
+
+.hr{
+    display: flex;
+    background-color: var(--red-color);
+    height: 1px;
+    align-self: center;
+}
+
+.useful-information-fourth{
+    margin-top: 110px;
+}
+
+
+.useful-information-fourth .circle{
+    background-color: var(--red-color);
+    width: 55px;
+}
+
+.icon.exclamation-mark{
+    content: "\e904";
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    font-size: 90px;
+    color: var(--alternative-font-color);
+    text-align: center;
+}
 /*  / news-section */
 
 .category-17 .news-link .proportion-saver{
@@ -594,6 +1248,41 @@ a.news-preview{
     display: flex;
     justify-content: center;
 }
+
+.img-wrp{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  
+  .square{
+    padding-bottom: 100%;
+  }
+  
+  .rectangle{
+    padding-bottom: 60%;
+  }
+  
+  .proportion-saver{
+    position: relative;
+  /*  border: 1px solid grey;*/
+  }
+  
+  .img-wrp .img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: auto;
+    width: 125px;
+    transform: translate(-50%, -50%);
+  }
+  
+  .img{
+    max-width: 100%;
+  }
 
 /* Old site design */
 
@@ -732,6 +1421,16 @@ a.news-preview{
     border-left: 10px solid var(--orange-color);
 }
 
+.h2.front-page{
+    color: var(--alternative-font-color);
+    font-size: 21px;
+    padding: 10px 16px;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    border-left: 10px solid var(--orange-color);
+}
+
 /* feather lab styles */
 
 .feather-compilations .h3{
@@ -752,10 +1451,11 @@ a.news-preview{
     padding-bottom: 140px;    
     text-align: center;
     margin-bottom: 30px;
+    color: var(--black-color);
 }
 
 .by-systematic .h3:after {
-    content: '\e917';
+    content: '\e908';
     font-family: 'icons';
     color: var(--orange-color);
     font-size: 117px;
@@ -773,10 +1473,11 @@ a.news-preview{
     padding-bottom: 140px;
     text-align: center;
     margin-bottom: 30px;
+    color: var(--black-color);
 }
 
 .by-alphabet .h3:after {
-    content: '\e90d';
+    content: '\e900';
     font-family: 'icons';
     color: var(--orange-color);
     font-size: 117px;
@@ -853,7 +1554,7 @@ a.news-preview{
 }
 
 .comment-status.wait .icon:after{
-    content: '\e908';    
+    content: '\e911';    
     text-align: center;    
 }
 
@@ -862,7 +1563,7 @@ a.news-preview{
 }
 
 .comment-status.answered .icon:after{
-    content: '\e911';
+    content: '\e915';
     text-align: center;
 }
 
@@ -1247,8 +1948,7 @@ article > .content .date-wrp{
 
 @media (min-width: 641px){
     .main-nav .ul{
-        display: flex;
-        flex-wrap: wrap;
+        display: block;
     }
 
     
